# autoconf-automake

./: .gitignore  configure.ac
example2/: configure.ac  test-output.txt.in
example3/: License  Makefile.am  configure.ac  hello.c  hello.h  helloapp.c
